# SynapseBot

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json  docker-compose.yml  index.cjs  package.json
.github/workflows/: Node.js.yml  Rust.yml  ci.yml
discord/: .dockerignore  Cargo.toml  Dockerfile  Makefile.toml  config.json
discord/src/: main.rs
discord/src/cmds/: ping.rs
discord/src/events/: message_create.rs  mod.rs  twitch.rs
discord/src/events/twitch/: anongiftpaidupdate.rs  cheer.rs  message.rs  raided.rs  resub.rs  subgift.rs  subscription.rs
redis/: redis.conf
src/: discord.cjs  main.rs  twitch.cjs
src/appcmds/: help.mjs  ping.mjs
src/cmds/: help.rs  mod.rs  ping.mjs  ping.rs
src/cmds/discord/: help.mjs
src/cmds/twitch/: help.mjs  ping.mjs
src/events/: message_create.rs
src/events/discord/: interactionCreate.cjs  messageCreate.cjs  ready.cjs
src/events/twitch/: anongiftpaidupdate.cjs  cheer.cjs  message.cjs  raided.cjs  resub.cjs  subgift.cjs  subscription.cjs
src/loaders/: loadCommands.cjs  loadEvents.cjs  loadSlashCommands.cjs
src/msgcmds/: help.mjs  ping.mjs
twitch/: Dockerfile  config.json  index.cjs  package-lock.json  package.json
twitch/src/: redis.cjs
twitch/src/cmds/: ping.mjs
twitch/src/events/: anongiftpaidupdate.cjs  cheer.cjs  connected.cjs  message.cjs  raided.cjs  resub.cjs  subgift.cjs  subscription.cjs
twitch/src/loaders/: loadCommands.cjs  loadEvents.cjs
