[package]
name = "discord"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenvy = "0.15.7"
poise = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
